# DeepOnto

./: .gitignore  .gitmodules  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  index.html  inter_subs.py  intra_subs.py  mkdocs.yml  objects.inv  om_cands.py  om_eval.py  om_subs.py  onto_match.py  onto_prune.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml
.github/workflows/: ci.yml
assets/: example_candidate_mappings.tsv  example_scored_candidate_mappings.tsv
bertmap/: index.html
bertsubs/: index.html
bio-ml/: index.html
changelog/: index.html
config/: bertmap.json  inter_subs_helis2foodon.json  intra_subs_foodon.json  intra_subs_go.json  string_match.json
data_scripts/: gen_subs_maps.py  mondo.py  mondo_prune.py  om_rank_cands.py  umls_mrconso.py  umls_prune.py
data_scripts/For_UMLS/: check_snomed_classes_orig_vs_owl.py  get_mappings.py  readme.md
data_scripts/hang/: get_STY_for_pruning.py  umls_mrconso_with_CUI_and_STY.py
data_scripts/src2tgt.rank/: stats.json
deeponto/: __init__.py  flagged_obj.py  saved_obj.py
deeponto/align/: evaluation.py  mapping.py
deeponto/bert/: __init__.py
deeponto/bertmap/: thesaurus.py
deeponto/config/: __init__.py  input_config.py
deeponto/evaluation/: eval_metrics.py
deeponto/models/: pipeline_base.py
deeponto/onto/: __init__.py  index.html  iris.py  mapping.py  onto_lama.py  ontology.py  ontology_subs.py  verbalisation.py  verbaliser.py
deeponto/utils/: __init__.py  data_utils.py  datastructures.py  decorators.py  file_processing.py  file_utils.py  general_processing.py  inverted_index.py  logging.py  oaei_utils.py  text_processing.py  text_utils.py
development/blinkout/: bm25.ipynb  bm25.py  mention2candidates.json  test.jsonl
development/iswc_resource/: mondo_prune.py  om_rank_cands.py
development/oaei_bioml/: melt.sh  melt_client.txt  print_html.py  print_latex.ipynb  read_oaei.py  test.rdf
docs/: Makefile  README.md  _sidebar.md  bertmap.md  bertsubs.md  bio-ml.md  changelog.md  commands.rst  conf.py  data_structures.md  deeponto.bert.static.html  deeponto.bert.train.html  deeponto.config.html  deeponto.data.align.html  deeponto.data.infer.html  deeponto.evaluation.html  deeponto.models.align.html  deeponto.models.align.logmap_java.html  deeponto.models.html  deeponto.models.infer.html  deeponto.onto.logic.html  faqs.md  genindex.html  getting-started.rst  hit.md  index.html  index.md  index.rst  intro.md  make.bat  model.md  modules.html  objects.inv  om_models.md  om_resources.md  ontolama.md  ontology.md  py-modindex.html  reasoning.md  using_deeponto.md  (+1 more)
docs/_sources/: deeponto.bert.rst.txt  deeponto.bert.static.rst.txt  deeponto.data.infer.rst.txt  deeponto.onto.graph.rst.txt
docs/assets/: example_bio-llm_candidate_mappings.tsv  example_candidate_mappings.tsv  example_reference_mappings.tsv
docs/hierarchy_transformers/: evaluation.md  hit.md  homepage.md  losses.md  models.md  utils.md
docs/overrides/: main.html
docs/pages/: bertmap.md  om_resources.md
docs/reference/: ontology.md  ontology_reasoner.md
docs/stylesheets/: extra.css
docs_old/: bertmap.md  data_structures.md  deeponto.bert.html  deeponto.data.html  deeponto.data.infer.subs.html  deeponto.html  deeponto.models.align.logmap_java.java-dependencies.html  deeponto.models.infer.deprecated.html  deeponto.onto.graph.html  deeponto.onto.html  deeponto.onto.logic.parser.html  deeponto.onto.prune.html  deeponto.onto.text.html  deeponto.utils.html  search.html  searchindex.js
docs_old/_modules/: deeponto.html  index.html
docs_old/_sources/: deeponto.config.rst.txt  deeponto.data.align.rst.txt  deeponto.models.align.logmap_java.rst.txt  deeponto.models.infer.deprecated.rst.txt  deeponto.models.rst.txt  deeponto.utils.rst.txt  index.rst.txt
faqs/: index.html
hit/: index.html
java/: README.md  gradle_install.sh
java_build/: build_jars.sh
javalib/: build_jars.bat
om_resources/: index.html
ontolama/: index.html
ontology/: index.html
overrides/: main.html
scripts/: bertmap.py  bertsubs_intra_evaluate.py  bertsubs_simple_test.py  inter_subs.py  om_eval.py  onto_prune.py
search/: search_index.json
site/: 404.html  objects.inv  sitemap.xml
stylesheets/: extra.css
test_scripts/: gen_subs_maps.py  mapping_subs.py  mondo_iris.json  umls_prune.py
verbaliser/: index.html
(+358 files in other folders)
