[metadata]
name = deeponto
version = 0.1.0
author = Yuan He (KRR-Oxford)
author_email = yuan.he@cs.ox.ac.uk
license = Apache License 2.0
license_files = LICENSE
description = DeepOnto aims to provide implemented deep learning models and an evaluation platform for various ontology engineering purposes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://krr-oxford.github.io/DeepOnto/#/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
