[metadata]
name = deeponto
version = 0.7.0
author = Yuan He (KRR-Oxford)
author_email = yuan.he@cs.ox.ac.uk
license = Apache License 2.0
license_files = LICENSE
description = DeepOnto aims to provide implemented deep learning models and an evaluation platform for various ontology engineering purposes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://krr-oxford.github.io/DeepOnto/#/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Intended Audience :: Science/Research

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    JPype1==1.3.0
    mowl-borg==0.1.0
    yacs
    torch
    anytree==2.8.0
    click
    dill
    pandas
    numpy
    scikit_learn
    openprompt==1.0.0
    transformers
    datasets
    spacy
    pprintpp
    networkx
    lxml
    textdistance
    ipywidgets==7.7.1
    ipykernel
    enlighten


[options.extras_require]
documentation = 
    mkdocs>=1.4.2
    mkdocstrings>=0.19.1
    mkdocs-material>=9.0.5
    mkdocs-include-markdown-plugin>=4.0.3
    mkdocstrings-python>=0.8.3
    mkdocs-git-revision-date-localized-plugin


[options.package_data]
* = *.jar, *.yaml

[options.packages.find]
where = src
